syntax = "proto3";

// each class is defined in each own file, inside a common package
option java_multiple_files = true;
option java_package = "fileuploadservice";

package fileuploadservice; // package do proto


service FileUploadService {
  rpc SendFileBlocks(stream Contents) returns (Result);
}

message Contents {
  bytes fileBlockBytes = 1; // bytes type is an array of bytes
  string filename = 2;
  string contentType = 3;
}

message Result {
  int32 numBlocksReceived = 1;
  string hashId = 2; // Hash from storage Blob gsutil uri
}
